# hello

./: .gitignore  Makefile.am  README.md  configure.ac
lib/: Makefile.am  lib.c
po/: zh_TW.po
src/: Makefile.am  hello.c
