AC_INIT([hello], 1.0)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE
LT_INIT
IT_PROG_INTLTOOL([0.50.0])
AC_PROG_CC
PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(DEPS, [gtk+-3.0])
AC_SUBST(DEPS_CFLAFS)
AC_SUBST(DEPS_LIBS)
GETTEXT_PACKAGE=hello
LOCALEDIR=${datadir}/locale
AC_SUBST(GETTEXT_PACKAGE)
AC_SUBST(LOCALEDIR)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [The domain to use with gettext])
AM_GLIB_GNU_GETTEXT
AC_CONFIG_FILES(Makefile lib/Makefile src/Makefile po/Makefile.in)
AC_OUTPUT
